--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1.5rem;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: #a4a7ad;
@@ -24,6 +25,10 @@ body{
     height: 50%;
     grid-template-rows: auto auto auto auto auto auto;
     grid-template-columns: auto auto auto auto auto auto;
+}
+.timer{
+    transform: translateY(-100px);
+    font-size: 2.5rem;
 }
 .container > *{
     display: flex;
