--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 }
 *{
     box-sizing: border-box;
+    margin: 0;
 }
 body{
     width: 100vw;
@@ -14,21 +15,41 @@ body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1.5rem;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #a4a7ad;
+    background-color: #FFEAEF;
+}
+.layout{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transform: translateY(-1%);
 }
 .container{
     display: grid;
-    width: 50%;
-    height: 50%;
+    width: 75%;
+    height: 75%;
     grid-template-rows: auto auto auto auto auto auto;
     grid-template-columns: auto auto auto auto auto auto;
 }
-.timer{
-    transform: translateY(-100px);
-    font-size: 2.5rem;
+.title{
+    background-color: #FFFFFF;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #FE8FA7;
+    font-size: 5rem;
+    height: 20%;
+}
+.bar{
+    height: 20px;
+    background-color: #6FCDE0;
+    width: 100%;
+    margin-bottom: 25px;
 }
 .container > *{
     display: flex;
@@ -43,8 +64,6 @@ body{
     align-items: center;
     cursor: pointer;
     transition: transform 0.2s ease-in-out;
-    transition: background 0.2s ease-in-out;
-    border-radius: 10px;
     user-select: none;
     &:active{
         transform: scale(0.95);
@@ -55,14 +74,11 @@ body{
     color: black;
 }
 .nonActive{
+    border: 1px solid #606746;
     color: transparent;
-    background: repeating-linear-gradient(
-        -45deg,
-        #ddd,
-        #ddd 10px,
-        #eee 10px,
-        #eee 20px
-      );
+    background: url('../public/nonActive.png');
+    background-size: cover;
+    background-position: center center;
 }
 p{
     font-size: 2.5rem;
